--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <body id="top">
     <header>
         <div class="header-content">
-            <h1>[Name]</h1>
-            <p>CS PhD Student • [University]</p>
+            <h1>Cristhian Núñez Ramos</h1>
+            <p>CS PhD Student • Pontificia Universidad Católica de Chile</p>
             <div class="social-links-header">
                 <a href="#"><i class="fas fa-graduation-cap"></i>Google Scholar</a>
                 <a href="#"><i class="fab fa-twitter"></i>Twitter</a>
