--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
 
     <main>
         <section id="about">
-            <p>Hi! I am a PhD student in Computer Science at [University], advised by <a href="#">[Advisor]</a>.</p>
+            <p>Welcome! I am a Ph.D. student in Mathematics at the Pontificia Universidad Católica de Chile, advised by <a href="#">Manuel A. Sanchez Uribe</a>.</p>
         </section>
 
         <section id="research">
             <h2>Research</h2>
-            <p>My research focuses on <strong>[Research Area 1] and [Research Area 2]</strong>. My recent works explore:</p>
+            <p>My research focuses on <strong>Numerical Analysis and Scientific Computing</strong>. My recent works explore:</p>
             <ul>
-                <li>[Research Topic 1] (<a href="#">[Conference 1]'24</a>, <a href="#">[Conference 2]'23</a>, <a href="#">[Conference 3]'22</a>)</li>
-                <li>[Research Topic 2] (<a href="#">[Conference 4]'24</a>, <a href="#">[Conference 5]'23</a>, <a href="#">[Conference 6]'23</a>)</li>
+                <li>Finite Elements Methods (<a href="#">[Conference 1]'24</a>, <a href="#">[Conference 2]'23</a>, <a href="#">[Conference 3]'22</a>)</li>
+                <li>Partial Differential Equations (<a href="#">[Conference 4]'24</a>, <a href="#">[Conference 5]'23</a>, <a href="#">[Conference 6]'23</a>)</li>
                 <li>[Research Topic 3] (<a href="#">[Conference 7]'24</a>, <a href="#">[Conference 8]'23</a>, <a href="#">[Conference 9]'23</a>)</li>
                 <li>[Research Topic 4] (<a href="#">[Journal 1]'22</a>, <a href="#">[Journal 2]'21</a>)</li>
             </ul>
