--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <div class="header-content">
             <h1>Cristhian Núñez Ramos</h1>
-            <p>CS PhD Student • Pontificia Universidad Católica de Chile</p>
+            <p>PhD Student • Pontificia Universidad Católica de Chile</p>
             <div class="social-links-header">
                 <a href="#"><i class="fas fa-graduation-cap"></i>Google Scholar</a>
                 <a href="#"><i class="fab fa-twitter"></i>Twitter</a>
@@ -45,8 +45,8 @@
             <ul>
                 <li>Finite Elements Methods (<a href="#">[Conference 1]'24</a>, <a href="#">[Conference 2]'23</a>, <a href="#">[Conference 3]'22</a>)</li>
                 <li>Partial Differential Equations (<a href="#">[Conference 4]'24</a>, <a href="#">[Conference 5]'23</a>, <a href="#">[Conference 6]'23</a>)</li>
-                <li>[Research Topic 3] (<a href="#">[Conference 7]'24</a>, <a href="#">[Conference 8]'23</a>, <a href="#">[Conference 9]'23</a>)</li>
-                <li>[Research Topic 4] (<a href="#">[Journal 1]'22</a>, <a href="#">[Journal 2]'21</a>)</li>
+                <li>Numerical Simulation (<a href="#">[Conference 7]'24</a>, <a href="#">[Conference 8]'23</a>, <a href="#">[Conference 9]'23</a>)</li>
+                <li>Optimization (<a href="#">[Journal 1]'22</a>, <a href="#">[Journal 2]'21</a>)</li>
             </ul>
         </section>
 
